<resources>
    <string name="app_name">DanielsAndrew_CE01</string>
    <string name="full_name">Andrew Daniels</string>
    <string name="birthday_label">BIRTHDAY</string>
    <string name="birthday">June 14th 1993</string>
    <string name="hometown_label">HOMETOWN</string>
    <string name="hometown">West Des Moines, Iowa</string>
    <string name="hobbies_label">HOBBIES</string>
    <string name="hobbies">Programming\nTennis\nBasketball</string>
    <string name="about_me_label">ABOUT ME</string>
    <string name="about_me">I served 4 years in the US Navy. I’ve always known that I have a creative mind, so I decided what better career would there be for me other than doing something that allows me to create amazing software for people to enjoy? I’ve been attending Full Sail University to become a Mobile Software Developer and I love every minute of it!</string>
    <string name="btn_constraint_label">Constraint Layout</string>
    <string name="btn_linear_label">Linear Layout</string>
</resources>
