<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_image1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile_picture" />

        <TextView
            android:id="@+id/full_name1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:gravity="center|end"
            android:lines="1"
            android:text="@string/full_name"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/birthday_label1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_image1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birthday_label1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/birthday_label"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image1" />

        <TextView
            android:id="@+id/birthday1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthday_label1" />

        <TextView
            android:id="@+id/hometown_label1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hometown_label"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthday1" />

        <TextView
            android:id="@+id/hometown1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hometown"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hometown_label1" />

        <TextView
            android:id="@+id/hobbies_label1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hobbies_label"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hometown1" />

        <TextView
            android:id="@+id/hobbies1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="3"
            android:text="@string/hobbies"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hobbies_label1" />

        <TextView
            android:id="@+id/about_me_label1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_me_label"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hobbies1" />

        <TextView
            android:id="@+id/about_me1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_me_label1" />

        <Button
            android:id="@+id/btn_linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_linear_label"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_me1" />

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/layoutZero"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:lines="1"
            android:layout_marginTop="10dp"
            android:text="@string/full_name"
            android:textAlignment="viewEnd"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/birthday_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/birthday_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/birthday" />

        <TextView
            android:id="@+id/hometown_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/hometown_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/hometown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/hometown" />

        <TextView
            android:id="@+id/hobbies_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/hobbies_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/hobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:paddingTop="8dp"
            android:text="@string/hobbies" />

        <TextView
            android:id="@+id/about_me_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/about_me_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/about_me" />

        <Button
            android:id="@+id/btn_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_constraint_label" />

    </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>